NM Sections DW end

--- a/index.html
+++ b/index.html
@@ -8,6 +8,109 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <section class="lo_que_hacemos">
+        <div class="fondo_lo_que_hacermos"></div>
+        <div class="contenedor_LoQueHacemos">
+            <div class="titulo_LoQueHacemos">
+                <h1>Lo que hacemos</h1>
+                <h1 style="font-weight: normal;">Para tu <span class="underNegocio">negocio</span></h1>
+            </div>
+            <div class="container_cards_LoQueHacemos">
+                <div class="card1 card">
+                    <div class="icon1 icon">
+                        <img src="./img/Lo_que_hacemos/Internet.svg" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3>Website Design</h3>
+                    </div>
+                    <div class="card_info">
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                </div>
+                <div class="card2 card">
+                    <div class="icon2 icon">
+                        <img src="./img/Lo_que_hacemos/computer-6823 1.svg" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3>Web Development</h3>
+                    </div>
+                    <div class="card_info">
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                </div>
+                <div class="card3 card">
+                    <div class="icon3 icon">
+                        <img src="img/Lo_que_hacemos/mobile-phone-1164 1.svg" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3>Mobile APP Development</h3>
+                    </div>
+                    <div class="card_info">
+                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="acercaNosotros">
+        <div class="contenedor_acercaNosotros">
+            <div class="img_acercaNosotros">
+                <img src="./img/AcercaNosotros/AcercaNosotros.svg" alt="AcercaNosotros">
+            </div>
+            <div class="info_acercaNosotros">
+                <div class="TituloacercaNosotros">
+                    <h1>Acerca de</h1>
+                    <h1 style="font-weight: normal; line-height: 20px;"> <span class="underNosotros">Nosotros</span></h1>
+                </div>
+                <div class="TextoacercaNosotros">
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br><br>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="BotonacercaNosotros">
+                    <a href="#">Explore More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="trabajosRecientes">
+        <div class="fondo_trabajosRecientes"></div>
+        <div class="head_trabajosRecientes">
+            <div class="titulo_trabajosRecientes">
+                <h1>Trabajos Recientes</h1>
+                <h1 style="font-weight: normal"> Por <span class=" underExpertos">nuestros expertos</span></h1>
+            </div>
+            <div class="Texto_trabajosRecientes">
+                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+        </div>
+        <div class="ContenidoTrabajosRecientes">
+            <div class="trabajosrecientes_card card1tr">
+                <div class="imagentrabajoR">
+                    <img src="./img/TrabajosRecientes/Soup.svg" alt="">
+                </div>
+                <div class="trabajosRecientes_foot">
+                    <div class="nameTrabajoR">
+                        <h3>UI Soup</h3>
+                    </div>
+                    <div class="botonTrabajoR">
+                        <a href="#">View Work</a>
+                    </div>
+                </div>
+            </div>
+            <div class="trabajosrecientes_card card2tr">
+                <div class="imagentrabajoR">
+                    <img src="./img/TrabajosRecientes/Labs.svg" alt="">
+                </div>
+                <div class="trabajosRecientes_foot">
+                    <div class="nameTrabajoR">
+                        <h3>Goldcrown Labs</h3>
+                    </div>
+                    <div class="botonTrabajoR">
+                        <a href="#">View Work</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
