NM Mobile View Finished

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./style/index.css">
     <title>Landing Page</title>
 </head>
+
 <body>
     <section class="lo_que_hacemos">
         <div class="fondo_lo_que_hacermos"></div>
@@ -60,11 +62,14 @@
             <div class="info_acercaNosotros">
                 <div class="TituloacercaNosotros">
                     <h1>Acerca de</h1>
-                    <h1 style="font-weight: normal; line-height: 20px;"> <span class="underNosotros">Nosotros</span></h1>
+                    <h1 style="font-weight: normal; line-height: 20px;"> <span class="underNosotros">Nosotros</span>
+                    </h1>
                 </div>
                 <div class="TextoacercaNosotros">
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br><br>
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it to make a type specimen book. <br><br>
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
                 <div class="BotonacercaNosotros">
                     <a href="#">Explore More</a>
@@ -80,7 +85,8 @@
                 <h1 style="font-weight: normal"> Por <span class=" underExpertos">nuestros expertos</span></h1>
             </div>
             <div class="Texto_trabajosRecientes">
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                    took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
         </div>
         <div class="ContenidoTrabajosRecientes">
@@ -105,12 +111,16 @@
                     <div class="nameTrabajoR">
                         <h3>Goldcrown Labs</h3>
                     </div>
-                    <div class="botonTrabajoR">
+                    <div class="botonTrabajoR botonTra2">
                         <a href="#">View Work</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer id="footer">
+
+    </footer>
 </body>
+
 </html>
