Remove SVG add PNG

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="acercaNosotros">
         <div class="contenedor_acercaNosotros">
             <div class="img_acercaNosotros">
-                <img src="./img/AcercaNosotros/AcercaNosotros.svg" alt="AcercaNosotros">
+                <img src="./img/AcercaNosotros/AcercaNosotros.png" alt="AcercaNosotros">
             </div>
             <div class="info_acercaNosotros">
                 <div class="TituloacercaNosotros">
@@ -92,7 +92,7 @@
         <div class="ContenidoTrabajosRecientes">
             <div class="trabajosrecientes_card card1tr">
                 <div class="imagentrabajoR">
-                    <img src="./img/TrabajosRecientes/Soup.svg" alt="">
+                    <img src="./img/TrabajosRecientes/Soup.png" alt="">
                 </div>
                 <div class="trabajosRecientes_foot">
                     <div class="nameTrabajoR">
@@ -105,7 +105,7 @@
             </div>
             <div class="trabajosrecientes_card card2tr">
                 <div class="imagentrabajoR">
-                    <img src="./img/TrabajosRecientes/Labs.svg" alt="">
+                    <img src="./img/TrabajosRecientes/Labs.png" alt="">
                 </div>
                 <div class="trabajosRecientes_foot">
                     <div class="nameTrabajoR">
