--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav class="navbar">
             <ul>
                 <li class="home"> <a href="#"><span class="underhome">Home</span></a> </li>
-                <li> <a href="#acercaNosotros">Nosotros</a> </li>
-                <li> <a href="#sercicios">Servicio</a> </li>
-                <li> <a href="#footer">Contacto</a> </li>
+                <li> <a href="#acercaNosotros"> <span class="undernav">Nosotros</span></a> </li>
+                <li> <a href="#sercicios"> <span class="undernav">Servicio</span></a></li>
+                <li> <a href="#footer"><span class="undernav">Contacto</span></a> </li>
             </ul>                   
         </nav>
         <div class="titulo_nav">
