--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>  
     
         <div class="container-card">
-            <div class="tarjeta trajeta1">
+            <div class="tarjeta tarjeta1">
                 <div class="imagentarjeta">
                     <img src="./img/Testimonios/Comillas_Testimonio.png" alt="comillas">
                 </div>
@@ -181,10 +181,10 @@
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
                 </div>
                 <div>
-                    <h3> <span class="gion">-</span> UI Soup</h3>
+                    <h3 class="Ref_tes"> <span class="gion">-</span> UI Soup</h3>
                 </div>
             </div>
-            <div class="tarjeta trajeta2">
+            <div class="tarjeta tarjeta2">
                 <div class="imagentarjeta">
                     <img src="./img/Testimonios/Comillas_Testimonio.png" alt="">
                 </div>
@@ -192,7 +192,7 @@
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
                 </div>
                 <div>
-                    <h3> <span class="gion">-</span> UI Soup</h3>
+                    <h3 class="Ref_tes"> <span class="gion">-</span> UI Soup</h3>
                 </div>
             </div>
         </div>
