Footer Tablet Responsive

--- a/index.html
+++ b/index.html
@@ -209,6 +209,36 @@
                     <h4>GET IN TOUCH</h4>
                 </div>
             </div>
+            <div class="rede_footer">
+                <div class="socialfooter">
+                    <div class="facebookft">
+                        <a href="#"><img src="img/Footer/Group 13.svg" alt=""></a>
+                    </div>
+                    <div class="Linkedft">
+                        <a href="#"><img src="img/Footer/Group 12.svg" alt=""></a>
+                    </div>
+                    <div class="Instagramft">
+                        <a href="#"><img src="img/Footer/Group 11.svg" alt=""></a>
+                    </div>
+                </div>
+                
+                <div class="contacto-tb-m">
+                    <div class="container2">
+                        <div class="imagen-telf">
+                            <img src="./img/Footer/Group 9.svg" alt="">
+                        </div>
+                        <div class="tel">
+                            <h4> +57 318-899-0695</h4>
+                        </div>
+                    </div>
+                    <div class="container3">
+                        <div class="imacorreo"> <img src="./img/Footer/Group 8.svg" alt=""></div>
+                        <div class="mai">
+                            <h4>contact@dreamagency.ca</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="container-formulario">
                 <div class="form1">
