Update link get in touch

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                         printer took a gallery of type and scrambled it to make a type specimen book. It has survived
                         not only five centuries.</p>
-                    <h4>GET IN TOUCH</h4>
+                    <a href="#"><h4>GET IN TOUCH</h4></a>
                 </div>
             </div>
 
