--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                         printer took a gallery of type and scrambled it to make a type specimen book. It has survived
                         not only five centuries.</p>
-                    <a href="#"><h4>GET IN TOUCH</h4></a>
+                    <a href="#">
+                        <h4>GET IN TOUCH</h4>
+                    </a>
                 </div>
             </div>
 
@@ -303,7 +305,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="container-formulario-mb">
                 <div class="form1">
                     <table>
@@ -325,8 +327,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <input type="text" id="ingresapais" name="Pais"
-                                        placeholder="Ingresa tu Pais">
+                                    <input type="text" id="ingresapais" name="Pais" placeholder="Ingresa tu Pais">
                                 </td>
                             </tr>
                             <tr>
@@ -338,8 +339,18 @@
                     </table>
                     <button id="Send">Enviar</button>
                 </div>
+            </div>
         </div>
         </div>
+        <div class="creditos">
+            <div class="derechos">
+                <p> <span>©</span> Este sitio ha sido creado con fines <span>académicos</span></p>
+            </div>
+            <div class="autores">
+                <a href="https://github.com/Sblanco16" target="_blank"><span class="under_autores">Sharith Blanco</span></a>
+                <a href="https://github.com/cmrales26" target="_blank"><span class="under_autores">Nelson Morales</span></a>
+                <a href="https://github.com/Dicavimer" target="_blank"><span class="under_autores">Diana Vidal</span></a>
+            </div>
         </div>
     </footer>
 </body>
